Tue May  6 04:17:19 2003  Tim Janik  <timj@gtk.org>

	* bsemain.c (bse_init_intern): 
	(bse_init_async): don't override previously set prgnames.

	* bserecords.sfidl: added SampleFileInfo record.

	* bsewaverepo.proc: provide bse-sample-file-info() to retrive
	info about a sample file prior to loading.

Mon May  5 03:52:24 2003  Tim Janik  <timj@gtk.org>

	* bseglue.c (bglue_proxy_request_notify): canonify signal names before
	attempting matches, fixes remaining "spurious signal" warnings. minor
	optimizations.

Mon Apr 28 22:15:52 2003  Tim Janik  <timj@gtk.org>

	* gsltests.c (main): added exp() timing loops.

	* gslcommon.c (gsl_init): properly initialize random numbers by
	calling srand() with usec fractions.

Mon Apr 28 05:02:28 2003  Tim Janik  <timj@gtk.org>

	* zintern/mono-wave.bse: updates to be used by BseTrack.

	* bsetrack.[hc]: support BseWave property concurrently to the
	"snet" property. "wave" tracks are played through an internal
	standard mono synth.

	* bseproject.[hc]: added bse_project_create_intern_synth() to merge
	an internal standard synth into the project.

	* bsestandardsynths.[hc]: renamed bse_standard_synth_lookup()
	to bse_standard_synth_inflate().

	* bsestorage.c (restore_container_child): check container's child
	filter before restoring a child.

	* bsecontainer.[hc]: added check_restore() methods to prevent
	certain children from being restored.

Sun Apr 27 22:23:08 2003  Tim Janik  <timj@gtk.org>

	* gslosctable.[hc]: added gsl_osc_wave_form_name(), improved debugging
	messages.

	* gsldatautils.[hc] (gsl_wave_file_dump_data): new function to write data
	portion of a WAVE file from a float block.

Sun Apr 27 02:52:31 2003  Tim Janik  <timj@gtk.org>

	* bsepcmdevice-oss.c: split up debugging messages into "oss" and
	"latency" keys.

	* bsepcmdevice.[hc]: added bse_pcm_device_request() to request
	specific sampling rates and number of channels.

	* bseserver.c: make the mixing frequency preference setting