@@ -1,3 +1,8 @@
+Sun May 11 14:22:12 2003  Tim Janik  <timj@gtk.org>
+
+	* bseitem.c: removed ::seqid-changed signal, added readable property
+	::seqid that also emits change notification.
+
 Tue May  6 04:17:19 2003  Tim Janik  <timj@gtk.org>
 
 	* bsemain.c (bse_init_intern): 
